<resources>
    <string name="app_name">CoAcStr</string>
    <string name="subtitle">Cope with academic stress</string>
    <string name="thank_you_message">Thank you for completing the questionnaire!!</string>
    <string name="option1">1</string>
    <string name="option2">2</string>
    <string name="option3">3</string>
    <string name="option4">4</string>
    <string name="option5">5</string>
    <string name="option6">6</string>
    <string name="button_finish_text">Finish</string>
    <string name="loading">Loading...</string>
    <string name="question_num">Question x/x</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="motivation_message">Complete all the questionnaires within 3 days of submitting the first questionnaire to get your evaluation completed!!</string>
    <string name="hooray_completed">Hooray! You have completed all the tests! Please come back for the next evaluation session\nThank you</string>
    <string name="already_attempted">You have already attempted this test. You can give this test again only when the admin approves it</string>
    <string-array name="gender">
        <item></item>
        <item>Female</item>
        <item>Male</item>
        <item>Other</item>
    </string-array>
    <string-array name="yes_no">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="cgpa_buckets">
        <item></item>
        <item>&gt; 8</item>
        <item>6 - 8</item>
        <item>&lt; 6</item>
    </string-array>
    <string-array name="yes_no_not_applicable">
        <item></item>
        <item>Yes</item>
        <item>No</item>
        <item>Not Applicable</item>
    </string-array>
    <string-array name="involvement">
        <item></item>
        <item>Not at all</item>
        <item>Faint</item>
        <item>Neutral</item>
        <item>Active</item>
        <item>Very active</item>
    </string-array>
    <string-array name="edu_levels">
        <item></item>
        <item>Uneducated</item>
        <item>Matric</item>
        <item>Higher Secondary</item>
        <item>Undergraduate</item>
        <item>Postgraduate</item>
        <item>Phd</item>
    </string-array>
    <string-array name="family_annual_income">
        <item></item>
        <item>&lt; 2.5 lac</item>
        <item>2.5-10 lac</item>
        <item>&gt; 10 lac</item>
    </string-array>
    <string-array name="year">
        <item></item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
    </string-array>
    <string-array name="branch">
        <item></item>
        <item>CSE</item>
        <item>ECE</item>
        <item>Electrical</item>
        <item>Metallurgy</item>
        <item>Production</item>
        <item>Mechanical</item>
        <item>Civil</item>
        <item>Aerospace</item>
    </string-array>

</resources>
